# project_builder

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: build.yml
aspect_macro/: Cargo.toml
aspect_macro/src/: lib.rs
builder_macro/: Cargo.toml
builder_macro/src/: lib.rs
project/: Cargo.toml
project/src/: lib.rs  main.rs  struct_demo.rs  test.rs  test_tdd.rs  thread_pool.rs
project/tests/: builder_test.rs
