[package]
name = "project"
version = "0.1.0"
edition = "2021"

[dependencies]
builder_macro = { path = "../builder_macro" }
aspect_macro = { path = "../aspect_macro" }
lazy_static = "1.5.0"
tokio = { version = "1.43.0", features = ["time"] }
tracing-test = "0.2.5"
gag = "1.0.0"
tracing = "0.1.41"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
